Fix for scrollbars appearing on some devices

--- a/src/public/style.css
+++ b/src/public/style.css
@@ -1,5 +1,7 @@
 body {
   font-family: Arial;
+  padding: 0;
+  margin: 0;
 }
 .parent {
   display: flex;
